--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 :root {
-    --text-color: #DBE4EF;
-    --card-front-color: #144480;
-    --card-back-color: #00F4BF;
+    --text-color: #42484f;
+    --card-front-color: #e9ecf0;
+    --card-back-color: #000000;
 }
 
 body {
