--- a/style.css
+++ b/style.css
@@ -96,6 +96,22 @@ footer p {
     margin-top: 0.5rem;
 }
 
+@media (max-width: 560px){
+    body{
+        background: url('img/bd-mobile.webp');
+    }
+
+    .cartao {
+        flex: 1 0 calc(100% - 1rem);
+    }
+
+    .cartao__conteudo h3 {
+        font-size: 3vW;
+    }
+
+    .cartao__conteudo p {
+        font-size: 3.8vw;
+    }
 
 
 
