--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 :root {
-    --text-color: #42484f;
-    --card-front-color: #e9ecf0;
-    --card-back-color: #000000;
+    --text-color: #DBE4EF;
+    --card-front-color: #144480;
+    --card-back-color: #00F4BF;
 }
 
 body {
@@ -77,8 +77,8 @@ body {
 
 .cartao__conteudo__resposta {
     transform: rotateY(180deg);
-    background-color: rdba(0, 244, 191 0.2);
-    border: apx solid var(--card-back-color);
+    background-color: rdba(0, 244, 191, 0.2);
+    border: 4px solid var(--card-back-color);
 }
 
 footer {
@@ -112,11 +112,4 @@ footer p {
     .cartao__conteudo p {
         font-size: 3.8vw;
     }
-
-
-
-
-
-
-
-
+}
